--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "dynamic-routes",
+  "name": "rest-routes-creator",
   "version": "1.0.0",
-  "description": "lib to create dyanmic rest routes",
+  "description": "lib to create dynamic rest routes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node test.js"
   },
   "author": "vitorguima",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vitorguima/express-routes-creator"
   }
 }
