--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rest-routes-creator",
   "version": "1.0.1",
   "description": "lib to create dynamic rest routes",
-  "main": "index.js",
+  "main": "createRoute.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node test.js"
